[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[all]>=0.115.6,<0.116.0",
    "sqlmodel>=0.0.22,<0.1.0",
    "sqlalchemy-utc>=0.14.0,<0.15.0",
    "aiosqlite>=0.20.0,<0.21.0",
    "alembic>=1.14.0,<1.15.0",
    "greenlet>=3.1.1,<3.2.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
]
